--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fun-Space</title>
 </head>
 <body>
-        
+        <h1>testing</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ipsum praesentium ipsa velit eaque ut fuga nostrum quae dolorum sit ducimus minus, dolore delectus corporis!</p>
 </body>
 </html>
