--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Fun-Space</title>
 </head>
 <body>
-        <h1>Belajar Git Belajar Git Belajar Git lagii, Tung Tung Tung Tung Tung Sahur</h1>
+        <h1>Belajar Git Belajar Git Belajar Git lagii, </h1>
+        <h1>Belajar Git branch </h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ipsum praesentium ipsa velit eaque ut fuga nostrum quae dolorum sit ducimus minus, dolore delectus corporis!</p>
 </body>
 </html>
