--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun-Space</title>
+  <meta charset="UTF-8">
+  <title>Profil Sederhana</title>
 </head>
 <body>
-        <h1>Belajar Git Belajar Git Belajar Git lagii, </h1>
-        <h1>Belajar Git branch </h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ipsum praesentium ipsa velit eaque ut fuga nostrum quae dolorum sit ducimus minus, dolore delectus corporis!</p>
+
+  <h1>Profil Saya</h1>
+  <p>Nama: Yazid</p>
+  <p>Perbuahan untuk murojaah branch
+  <p>LA VACA SATURNO SATURNITA</p>
+
+  <h2>Kontak</h2>
+  <ul>
+  </ul>
+
 </body>
 </html>
