--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Halaman About</title>
 </head>
 <body>
+    <h1>Perubahan di Fitur-3 (Halamana Aboutttt)</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, eligendi? Laudantium odio odit quae quasi voluptates, neque quo, facilis quas at blanditiis exercitationem sed illum laborum nihil vitae est dignissimos.</p>
 </body>
 </html>
